--- a/testGit.html
+++ b/testGit.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Nguyễn Phước Minh Hiếu đang test git</h1>
+    <h1>Nguyễn Phước Minh Hiếu test git</h1>
+    <h2>type test thêm xóa</h2>
 </body>
 </html>
