--- a/testGit.html
+++ b/testGit.html
@@ -12,5 +12,6 @@
     <h3>Theme lan 2</h3>
 
     <h1>test theem nhánh vào git (hieu-test)</h1>
+    <h1>new code test pull request</h1>
 </body>
 </html>
